# libsgd_examples

./: .gitignore  Makefile  README.md  build.bat  ex001.c  ex001.py  ex002.c  ex002.py  ex003.c  ex003.py  ex004.c  ex004.py  imgui.ini  main.py  pyrun.bat
assets/gltf/: arch_with_colliders.glb  birch_tree1.glb  ground50m.glb  tree1.glb  turtle.glb  water_plane.glb
assets/levels/: spooky_shooter_1.json
assets/materials/Ground048_1K-JPG/: Ground048_1K-JPG.mtlx  Ground048_1K-JPG.usdc
assets/materials/Marble021_1K-JPG/: Marble021_1K-JPG.mtlx  Marble021_1K-JPG.usdc
assets/materials/Metal061A_1K-JPG/: Metal061A_1K-JPG.mtlx  Metal061A_1K-JPG.usdc
assets/materials/Wood067_1K-JPG/: Wood067_1K-JPG.mtlx  Wood067_1K-JPG.usdc
halloween/: CMakeLists.txt  imgui.ini  level.json  shooter.py
halloween/assets/: License.txt
halloween/include/: misc_functions.h
halloween/lib/: sgd_dynamic.lib
halloween/src/: halloween_shooter.cpp
level_editor/: actor.py  actor_test.json  function_test.py  level.json  main.py
runner_demo/: CMakeLists.txt  CMakeSettings.json  build.bat  imgui.ini
runner_demo/src/: environment.cpp  environment.h  main.cpp  misc_functions.cpp  misc_functions.h  player.cpp  player.h
spooky_shooter/: CMakeLists.txt  imgui.ini
spooky_shooter/level_editor_python/: actor.py  camerarig.py  environment.py  functions.py  level_editor.py
spooky_shooter/src/: misc_functions.cpp  python_example.py  spooky_shooter.cpp
video_scripts/: command_line.txt  ideas.txt  msys2_install.txt  series_introduction.txt  video_descriptions.txt  video_descrptions.txt
